--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body{
 div{
     background-color: white;
     margin: 10px;
-    width: 25%
+    width: 25%;
 }
 div{
     border: solid 2px antiquewhite;
@@ -46,6 +46,10 @@ div.header, div.instructions{
 .userTotal{
     width: 15%;
     height: 60px;
+}
+
+.gems{
+    clear: both;
 }
 .gemImage{
     height: 60px;
